--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2190,7 +2190,7 @@ input, select, textarea {
 		button:disabled,
 		.button.disabled,
 		.button:disabled {
-			pointer-events: none;
+			/*pointer-events: none;*/
 			opacity: 0.25;
 		}
 
@@ -2636,11 +2636,41 @@ input, select, textarea {
 				margin-top: 0;
 			}
 
-			.image.main img {
-				width: 100%;
-			}
+.image.main img {
+	width: 100%;
+	height: auto;
+	aspect-ratio: 2 / 1;
+	display: block;
+	object-fit: contain;
+}
 
-		@media screen and (max-width: 736px) {
+.skills-list {
+	font-weight: 600;
+	list-style-type: disc;
+	padding-left: 1.25rem;
+}
+.skills-list li {
+	margin-bottom: 0.25rem;
+}
+.cert-list {
+	font-weight: 600;
+	list-style-type: disc;
+	padding-left: 1.25rem;
+}
+.cert-list li {
+	margin-bottom: 0.25rem;
+}
+.interests-list {
+	font-weight: 600;
+	list-style-type: disc;
+	padding-left: 1.25rem;
+}
+.interests-list li {
+	margin-bottom: 0.25rem;
+}
+
+
+@media screen and (max-width: 736px) {
 
 			.image.fit {
 				margin: 2rem 0;
@@ -3100,10 +3130,10 @@ input, select, textarea {
 		display: -webkit-inline-flex;
 		display: -ms-inline-flex;
 		display: inline-flex;
-		-moz-user-select: none;
+		/*-moz-user-select: none;
 		-webkit-user-select: none;
 		-ms-user-select: none;
-		user-select: none;
+		user-select: none;*/
 		cursor: default;
 		list-style: none;
 		margin: 0 0 2rem 2px;
@@ -3228,7 +3258,7 @@ input, select, textarea {
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0.2, 0.8), rgba(0, 0, 0.2, 0.8)), url("../../images/HenAnns_Technologies.png");
+			background-image: url("../../images/HenAnns_Technologies.png"), linear-gradient(0deg, rgba(0, 0, 0.2, 0.8), rgba(0, 0, 0.2, 0.8)), url("../../images/HenAnns_Technologies.png");
 			background-size: auto, auto, 100% auto;
 			background-position: center, 	center, top center;
 			background-repeat: repeat, 	no-repeat,	no-repeat;
@@ -3243,7 +3273,7 @@ input, select, textarea {
 			}
 
 		#wrapper.fade-in:before {
-			pointer-events: none;
+			/*pointer-events: none;*/
 			-moz-transition: opacity 1s ease-in-out;
 			-webkit-transition: opacity 1s ease-in-out;
 			-ms-transition: opacity 1s ease-in-out;
@@ -3275,6 +3305,61 @@ input, select, textarea {
 
 		}
 
+/* Force intro, header, nav visible without JS */
+#intro {
+	opacity: 1 !important;
+	visibility: visible !important;
+}
+
+#header, #nav {
+	opacity: 1 !important;
+	transform: none !important;
+	position: sticky; /* optional: keep header/nav in view */
+	top: 0;
+	z-index: 10;
+}
+
+/* Make header transparent over intro, then solid after scroll */
+#header {
+	/*background: rgba(0, 0, 0, 0.4);*/
+	transition: background 0.3s ease;
+	position: sticky;
+	top: 0;
+	padding-bottom: 2rem;
+}
+
+/* When page is scrolled, give header more contrast */
+body:not(:root) { /* always true; placeholder if you want JS-less detection you can skip this */
+}
+
+#header .logo {
+	display: inline-block;
+	font-family: "Source Sans Pro", Helvetica, sans-serif;
+	font-size: 2.25rem;
+	font-weight: 900;
+	letter-spacing: 0.075em;
+	line-height: 1;
+	padding: 1rem 1.75rem;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #ffffff;
+	border: 5px solid #ffffff;
+	opacity: 1;
+	transform: none;
+	visibility: hidden;
+	pointer-events: auto;
+	position: relative;
+	top: -0.5rem;
+	z-index: 3;
+
+	transition:
+			border-color 0.2s ease-in-out,
+			color 0.2s ease-in-out,
+			opacity 0.5s ease,
+			transform 0.5s ease,
+			visibility 0.5s;
+}
+
 /* Intro */
 
 	#intro {
@@ -3301,6 +3386,7 @@ input, select, textarea {
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
 		transition: opacity 1s ease, transform 1s ease;
 		position: relative;
+		top: -20rem;
 		cursor: default;
 		text-align: center;
 		z-index: 1;
@@ -3395,17 +3481,17 @@ input, select, textarea {
 			margin-top: -20rem;
 		}
 
-			#intro + #header .logo {
+			/*#intro + #header .logo {
 				-moz-transform: translateY(2rem);
 				-webkit-transform: translateY(2rem);
 				-ms-transform: translateY(2rem);
 				transform: translateY(2rem);
-				opacity: 0;
-				visibility: hidden;
-			}
+				opacity: 1;
+				!*visibility: hidden;*!
+			}*/
 
-		#intro.hidden {
-			pointer-events: none;
+		/*#intro.hidden {
+			!*pointer-events: none;*!
 			-moz-transform: translateY(2rem);
 			-webkit-transform: translateY(2rem);
 			-ms-transform: translateY(2rem);
@@ -3414,18 +3500,18 @@ input, select, textarea {
 			-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease, visibility 0.5s;
 			-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease, visibility 0.5s;
 			transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s;
-			opacity: 0;
+			opacity: 1;
 			visibility: hidden;
-		}
+		}*/
 
-			#intro.hidden + #header .logo {
+			/*#intro.hidden + #header .logo {
 				-moz-transform: translateY(0);
 				-webkit-transform: translateY(0);
 				-ms-transform: translateY(0);
 				transform: translateY(0);
 				opacity: 1;
 				visibility: visible;
-			}
+			}*/
 
 		body.is-preload #intro {
 			-moz-transform: translateY(2rem);
@@ -3487,7 +3573,6 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		color: #ffffff;
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
@@ -3504,11 +3589,11 @@ input, select, textarea {
 		-webkit-justify-content: -webkit-flex-end;
 		-ms-justify-content: -ms-flex-end;
 		justify-content: flex-end;
-		pointer-events: none;
-		-moz-user-select: none;
+		/*pointer-events: none;*/
+		/*-moz-user-select: none;
 		-webkit-user-select: none;
 		-ms-user-select: none;
-		user-select: none;
+		user-select: none;*/
 		height: 20rem;
 		padding-bottom: 8rem;
 		position: relative;
@@ -3551,7 +3636,7 @@ input, select, textarea {
 			border-bottom-color: #ffffff;
 		}
 
-		#header .logo {
+		/*#header .logo {
 			-moz-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.5s ease, -moz-transform 0.5s ease, visibility 0.5s;
 			-webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.5s ease, -webkit-transform 0.5s ease, visibility 0.5s;
 			-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.5s ease, -ms-transform 0.5s ease, visibility 0.5s;
@@ -3568,7 +3653,7 @@ input, select, textarea {
 			padding: 1rem 1.75rem;
 			text-transform: uppercase;
 			visibility: visible;
-		}
+		}*/
 
 			#header .logo:hover {
 				border-color: #18bfef !important;
